tests/src/frontend/syntax/invalid/invalid_at.sk
fun main(): void {
  Some(0) @ x
}
